--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -20,7 +20,7 @@
       <div class='small-12 columns'>
         <h1>ReFresh Coaching</h1>
         <div class="small-12 large-6 columns leftside">
-          <img src='https://drqkr2smv75b.cloudfront.net/www/images/Cal_Tina_GoldenGate_SM.jpg'>
+          <img class="home_images" src='https://drqkr2smv75b.cloudfront.net/www/images/Cal_Tina_GoldenGate_SM.jpg'>
         </div>
         <div class="small-12 large-6 columns rightside">
           <p>Coach / Mentor – These may be over used words within ministry circles today. However, everyone needs someone to help take them to the next level. A few years ago I had the opportunity to chat with one of the power hitters in Major League Baseball. After I was able to get the “stars” out of my eyes, he told me something pretty amazing. He has a personal hitting coach. I thought, “Wow, now here’s a guy making millions of dollars doing something that less than 1% of all athletes get to do at the professional level and he admits he needs a personal coach!”</p>
@@ -36,6 +36,9 @@
     <div class="row">
       <div class='small-12 columns'>
         <h1>The Barnabas Experience</h1>
+        <div class="small-12 columns">
+          <img id="barnabas_upper_image" class="home_images" src='https://drqkr2smv75b.cloudfront.net/www/images/CalandPastor_SM.jpg' />
+        </div>
         <div class="small-12 large-6 columns leftside">
           <p>
             After 30 years of ministry I can tell you many things NOT to do… They far outweigh the things I could tell you to do in order to finish strong. However, at the top of that list of things to do is take care of your family. That starts by making your spouse a priority! It is heartbreaking today to see pastors lose their marriage while trying to bring hope to others.
@@ -46,7 +49,7 @@
           <p class="text-center"><a class="button" href="/barnabas">More About The Barnabas Experience</a></p>
         </div>
         <div class="small-12 large-6 columns rightside">
-          <img src='https://drqkr2smv75b.cloudfront.net/www/images/CalandPastor_SM.jpg' />
+          <img id="barnabas_lower_image" class="home_images" src='https://drqkr2smv75b.cloudfront.net/www/images/CalandPastor_SM.jpg' />
         </div>
       </div>
     </div>
@@ -57,7 +60,7 @@
       <div class='small-12 columns'>
         <h1>Leadership Nuggets</h1>
         <div class="small-12 large-6 columns leftside">
-          <img src='https://drqkr2smv75b.cloudfront.net/www/images/IMG_0084_small.jpg'>
+          <img class="home_images" src='https://drqkr2smv75b.cloudfront.net/www/images/IMG_0084_small.jpg'>
         </div>
         <div class="small-12 large-6 columns rightside">
           <ol style="margin-top: 45px;">
