--- a/app/assets/stylesheets/refresh/_classes.scss
+++ b/app/assets/stylesheets/refresh/_classes.scss
@@ -15,6 +15,7 @@
   h1{
     @extend .headings;
     color: $white;
+    text-shadow: 1px 1px 3px rgba(0,0,0,0.4);
   }
   
   a, a:hover, a:active{
@@ -36,6 +37,9 @@
     border: 1px solid $rf-green;
     text-decoration: none;
   }
+  img{
+    transform: rotate(3.5deg);
+  }
   
 }
 
@@ -47,6 +51,7 @@
   h1{
     @extend .headings;
     color: $rf-green;
+    text-shadow: 1px 1px 3px rgba(0,0,0,0.4);
   }
   
   a, a:hover, a:active{
@@ -68,6 +73,9 @@
     border: 1px solid $white;
     text-decoration: none;
   }
+  img{
+    transform: rotate(-3.5deg);
+  }
   
 }
 
@@ -84,4 +92,9 @@
 
 .rf-gray{
   color: $rf-gray;
+}
+
+.home_images{
+  box-shadow: 3px 3px 5px rgba(0,0,0,0.4);
+  border: 7px solid $white;
 }
