--- a/app/assets/stylesheets/refresh/_layout.scss
+++ b/app/assets/stylesheets/refresh/_layout.scss
@@ -51,6 +51,9 @@ body{
     
     #endorsement{
       @extend .white_rows;
+      img{
+        transform: rotate(0deg);
+      }
     }
     
     #coaching{
@@ -59,6 +62,7 @@ body{
     
     #barnabas{
       @extend .white_rows;
+
     }
     
     #leadership{
