--- a/app/assets/stylesheets/refresh/_mobile.css.scss
+++ b/app/assets/stylesheets/refresh/_mobile.css.scss
@@ -2,31 +2,53 @@
 
 /* Define mobile styles */
 @media only screen {
-  
+  body{
+    #container{
+      #barnabas{
+        #barnabas_upper_image{
+          display: block;
+        }
+        #barnabas_lower_image{
+          display: none;
+        }
+      }
+    }
+  }
 }  
 
 /* max-width 640px, mobile-only styles, use when QAing mobile issues */ 
 @media only screen and (max-width: 40em) {
-  
+
 } 
 
 // Medium screens 
 
 /* min-width 641px, medium screens */ 
 @media only screen and (min-width: 40.063em) {
-  
+
 } 
 
 /* min-width 641px and max-width 1024px, use when QAing tablet-only issues */ 
 @media only screen and (min-width: 40.063em) and (max-width: 64em) {
-  
+
 } 
 
 // Large screens
 
 /* min-width 1025px, large screens */ 
 @media only screen and (min-width: 64.063em) {
-  
+  body{
+    #container{
+      #barnabas{
+        #barnabas_upper_image{
+          display: none;
+        }
+        #barnabas_lower_image{
+          display: block;
+        }
+      }
+    }
+  }
 }
 
 /* min-width 1025px and max-width 1440px, use when QAing large screen-only issues */
