--- a/app/views/admin/users/new.html.erb
+++ b/app/views/admin/users/new.html.erb
@@ -34,7 +34,7 @@
         <%= f.label :password_confirmation %><br />
         <%= f.password_field :password_confirmation %>
       </p>
-      <p class="button"><%= f.submit :class=>"button" %></p>
+      <p><%= f.submit :class=>"button" %></p>
     <% end %>
   </div>
 </div>
