--- a/app/assets/stylesheets/loader.scss
+++ b/app/assets/stylesheets/loader.scss
@@ -16,7 +16,7 @@
 @import "lib/classes";
 
 // Application Styles
+@import "refresh/mixins";
 @import "refresh/classes";
 @import "refresh/layout";
 @import "refresh/mobile";
-//@import "scaffolds";
