--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -19,7 +19,7 @@
     <div class="row">
       <div class='small-12 columns'>
         <h1>ReFresh Coaching</h1>
-        <div class="small-12 large-6 columns leftside">
+        <div class="small-12 large-6 columns leftside text-center">
           <img class="home_images" src='https://drqkr2smv75b.cloudfront.net/www/images/Cal_Tina_GoldenGate_SM.jpg'>
         </div>
         <div class="small-12 large-6 columns rightside">
@@ -36,7 +36,7 @@
     <div class="row">
       <div class='small-12 columns'>
         <h1>The Barnabas Experience</h1>
-        <div class="small-12 columns">
+        <div class="small-12 columns text-center">
           <img id="barnabas_upper_image" class="home_images" src='https://drqkr2smv75b.cloudfront.net/www/images/CalandPastor_SM.jpg' />
         </div>
         <div class="small-12 large-6 columns leftside">
@@ -48,7 +48,7 @@
           </p>
           <p class="text-center"><a class="button" href="/barnabas">More About The Barnabas Experience</a></p>
         </div>
-        <div class="small-12 large-6 columns rightside">
+        <div class="small-12 large-6 columns rightside text-center">
           <img id="barnabas_lower_image" class="home_images" src='https://drqkr2smv75b.cloudfront.net/www/images/CalandPastor_SM.jpg' />
         </div>
       </div>
@@ -59,7 +59,7 @@
     <div class="row">
       <div class='small-12 columns'>
         <h1>Leadership Nuggets</h1>
-        <div class="small-12 large-6 columns leftside">
+        <div class="small-12 large-6 columns leftside text-center">
           <img class="home_images" src='https://drqkr2smv75b.cloudfront.net/www/images/IMG_0084_small.jpg'>
         </div>
         <div class="small-12 large-6 columns rightside">
