--- a/app/assets/stylesheets/refresh/_mobile.css.scss
+++ b/app/assets/stylesheets/refresh/_mobile.css.scss
@@ -1,12 +1,23 @@
-// Small screens 
-
+// Small screens
 /* Define mobile styles */
 @media only screen {
   body{
+    .home_images{
+      margin-bottom: 15px;
+    }
+    //
+    // Front Page Styling
+    //
     #container{
+      #coaching{
+        img{
+          margin-top: 10px;
+        }
+      }
+      
       #barnabas{
         #barnabas_upper_image{
-          display: block;
+          display: inline-block;
         }
         #barnabas_lower_image{
           display: none;
@@ -14,37 +25,38 @@
       }
     }
   }
-}  
-
+}
 /* max-width 640px, mobile-only styles, use when QAing mobile issues */ 
-@media only screen and (max-width: 40em) {
-
-} 
-
+@media only screen and (max-width: 40em){} 
 // Medium screens 
-
 /* min-width 641px, medium screens */ 
-@media only screen and (min-width: 40.063em) {
-
-} 
-
+@media only screen and (min-width: 40.063em){}
 /* min-width 641px and max-width 1024px, use when QAing tablet-only issues */ 
-@media only screen and (min-width: 40.063em) and (max-width: 64em) {
-
-} 
-
+@media only screen and (min-width: 40.063em) and (max-width: 64em){}
 // Large screens
-
 /* min-width 1025px, large screens */ 
-@media only screen and (min-width: 64.063em) {
+@media only screen and (min-width: 64.063em){
   body{
+    //
+    // Front Page Styling
+    //
     #container{
+      h1{
+        letter-spacing: rem-calc(5);
+        padding-bottom: 15px;
+        margin-bottom: 35px;
+      }
+      #coaching{
+        img{
+          margin-top: 100px;
+        }
+      }
       #barnabas{
         #barnabas_upper_image{
           display: none;
         }
         #barnabas_lower_image{
-          display: block;
+          display: inline-block;
         }
       }
     }
@@ -52,25 +64,12 @@
 }
 
 /* min-width 1025px and max-width 1440px, use when QAing large screen-only issues */
-@media only screen and (min-width: 64.063em) and (max-width: 90em) {
-  
-}
-
+@media only screen and (min-width: 64.063em) and (max-width: 90em){}
 // XLarge screens 
-
 /* min-width 1441px, xlarge screens */ 
-@media only screen and (min-width: 90.063em) {
-  
-}
-
+@media only screen and (min-width: 90.063em){}
 /* min-width 1441px and max-width 1920px, use when QAing xlarge screen-only issues */
-@media only screen and (min-width: 90.063em) and (max-width: 120em) {
-  
-} 
-
+@media only screen and (min-width: 90.063em) and (max-width: 120em){}
 // XXLarge screens 
-
 /* min-width 1921px, xxlarge screens */
-@media only screen and (min-width: 120.063em) {
-  
-}
+@media only screen and (min-width: 120.063em){}
