Content update and contact update.

--- a/app/views/coaching/index.html.erb
+++ b/app/views/coaching/index.html.erb
@@ -1,7 +1,15 @@
 <div class="row">
   <div class="small-12 large-12 columns">
     <h2><%= page_title %></h2>
-    <hr />
+    <hr />    
+    <p>Here is the reality for pastors in today's world:</p>
+    <ul>
+      <li>71% have felt burned out or depressed…</li>
+      <li>70% do not have a close friend…</li>
+      <li>1,700 leave the ministry every MONTH!</li>
+    </ul>
+    
+    <h3>What is the solution?</h3>
     <p>
       What if we recognized that we can’t do this alone? God has placed people in our path to help us see, not only the issues we miss in the busyness of ministry, but the potential in us that we seem to overlook or deny.
     </p>
@@ -10,6 +18,25 @@
     </p>
     <p>
       The ReFresh Leadership and Coaching Network is designed to walk beside you to give insight in order to bring more capacity to your leadership. Whether you are in a ‘slump’ or just want to take your leadership up a notch, we are willing to be there and help you through.
+    </p>
+    <p>
+      The mission of ReFresh Ministries is, “Bringing Health to Pastors and Their Families.”
+    </p>
+    <p>
+      Here are a few ways we do that:
+    </p>
+    
+    <h3>Training</h3>
+    <p>
+      Bringing together several pastors and leaders or a staff to equip, encourage and train them to have a greater impact.
+    </p>
+    <h3>Speaking</h3>
+    <p>
+      We are available to speak for you in any capacity. Maybe you just need a weekend off or you want to pull together a staff retreat and invite your key volunteers.
+    </p>
+    <h3>Strategy</h3>
+    <p>
+      One of the key reasons for discouragement is a lack of clarity. We will help clarify your vision, mission and then help you realize it through practical steps.
     </p>
   </div>
 </div>
