--- a/app/views/layouts/parts/app/_head.html.erb
+++ b/app/views/layouts/parts/app/_head.html.erb
@@ -41,6 +41,7 @@
               <ul class="dropdown">
                 <li><a href="/about">ReFresh Ministries</a></li>
                 <li><a href="/about/cal">Cal Woods</a></li>
+                <li><a href="/about/ron">Ron Sylvia</a></li>
               </ul>
             </li>
           </ul>
