--- a/app/assets/stylesheets/refresh/_classes.scss
+++ b/app/assets/stylesheets/refresh/_classes.scss
@@ -12,11 +12,14 @@
   color: $white;
   padding: 50px 0px 50px 0px;
   
-  h1{
+  h1,h2,h3,h4,h5,h6{
     @extend .headings;
     color: $white;
     text-shadow: 1px 1px 3px rgba(0,0,0,0.4);
     border-bottom: 1px solid $white;
+  }
+  h4{
+    border-bottom: none;
   }
   
   a, a:hover, a:active{
@@ -49,7 +52,7 @@
   color: $rf-green;
   padding: 50px 0px 50px 0px;
   
-  h1{
+  h1,h2,h3,h4,h5,h6{
     @extend .headings;
     color: $rf-green;
     text-shadow: 1px 1px 3px rgba(0,0,0,0.4);
