--- a/app/views/layouts/parts/app/_foot.html.erb
+++ b/app/views/layouts/parts/app/_foot.html.erb
@@ -7,7 +7,7 @@
                 Copyright &copy;<%= Time.new.year %> ReFresh Ministries - All Rights Reserved
               </p>
             </div>
-            <div class='large-6 small-12 columns'>
+            <div id="nav_top_container" class='large-6 small-12 columns'>
               <ul class='inline-list right'>
                 <li>
                   <a id="nav_top" href='#top'>Top of Page</a>
@@ -24,6 +24,11 @@
         var body = $('body').height();
         var bodyminus = body - 158;
         $('#main').css({'min-height' : bodyminus});
+        // Front Page Contact Form
+        $("#btn_contact").click(function(){
+          // $('#contact_form').submit();
+          alert('This form isn\'t working yet.');
+        })
       });
       $(document).foundation();
     </script>
