Nuggets updates and javascript fixes

--- a/app/views/contact/index.html.erb
+++ b/app/views/contact/index.html.erb
@@ -2,24 +2,65 @@
   <div class="small-12 large-12 columns">
     <h2><%= page_title %></h2>
     <hr />
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce mattis venenatis dui et ultricies. In at quam nec nulla mollis consectetur. Duis elementum fringilla elementum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Curabitur eget augue quis augue pharetra sodales. Donec sed enim id dolor sagittis consectetur. Praesent suscipit mauris sed sapien pretium rhoncus.</p>
-
-    <p>Vivamus tristique molestie nunc eget placerat. Ut eu tristique enim. Donec sapien massa, faucibus id rutrum et, venenatis eget arcu. Pellentesque vel eros risus. Nullam eu eros nec velit consequat tempor. Morbi vehicula fringilla leo a rhoncus. Vestibulum at mauris in massa laoreet interdum. In ullamcorper, sem in pharetra efficitur, leo nulla bibendum mauris, nec aliquam leo risus faucibus metus. In interdum facilisis ligula nec viverra. Sed id massa posuere lectus luctus varius at et erat. Vestibulum vehicula est magna. Nullam laoreet vehicula odio vel aliquet. Curabitur ut arcu metus.</p>
-
-    <p>Sed vitae vestibulum sem, eu consequat elit. Donec libero dui, euismod sed augue eu, sagittis hendrerit enim. Suspendisse congue nisl et purus suscipit convallis. Vivamus libero arcu, semper at fringilla et, convallis ut risus. Vivamus ex felis, vehicula sit amet neque sit amet, vulputate sagittis neque. Donec mollis nunc neque, at scelerisque tellus condimentum vitae. Nam nec augue ornare, porttitor tortor et, vulputate eros. Quisque finibus augue vel auctor iaculis. Proin in leo nisi.</p>
-
-    <p>Fusce malesuada tempus justo sed laoreet. Maecenas sollicitudin eros et posuere porta. Quisque a mattis tortor. Vivamus porttitor faucibus nisl, non luctus metus auctor vitae. Etiam non aliquet dolor, ac tristique massa. Cras imperdiet gravida mi eu congue. Pellentesque fringilla erat sed justo tincidunt, vel pharetra ante lacinia. Mauris pulvinar euismod dui nec elementum. In nec blandit neque, et eleifend sem. Donec eleifend, felis eu luctus sodales, elit ex aliquet sapien, eget posuere risus justo a tellus. Aliquam porttitor urna sed sem auctor finibus.</p>
-
-    <p>Suspendisse volutpat feugiat leo, eget semper nisl molestie in. Nam tempor suscipit purus, at viverra lorem aliquet quis. Morbi tincidunt, ex vel tristique blandit, est mi ultrices eros, a commodo nulla mi at ipsum. Nam ac tincidunt erat, sit amet auctor urna. Vestibulum sit amet facilisis ex. Aenean ut interdum erat. Suspendisse malesuada arcu at sodales mollis. Nulla aliquet semper gravida. Sed id tempus felis. Cras placerat mi eget tortor pulvinar, sit amet consectetur lorem egestas. Nulla pretium, turpis in lobortis porttitor, mi quam dignissim sem, non porta turpis dolor ac elit. Suspendisse pellentesque dui vel odio blandit volutpat. Fusce finibus velit vitae tellus lobortis lacinia.</p> 
-    
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce mattis venenatis dui et ultricies. In at quam nec nulla mollis consectetur. Duis elementum fringilla elementum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Curabitur eget augue quis augue pharetra sodales. Donec sed enim id dolor sagittis consectetur. Praesent suscipit mauris sed sapien pretium rhoncus.</p>
-
-    <p>Vivamus tristique molestie nunc eget placerat. Ut eu tristique enim. Donec sapien massa, faucibus id rutrum et, venenatis eget arcu. Pellentesque vel eros risus. Nullam eu eros nec velit consequat tempor. Morbi vehicula fringilla leo a rhoncus. Vestibulum at mauris in massa laoreet interdum. In ullamcorper, sem in pharetra efficitur, leo nulla bibendum mauris, nec aliquam leo risus faucibus metus. In interdum facilisis ligula nec viverra. Sed id massa posuere lectus luctus varius at et erat. Vestibulum vehicula est magna. Nullam laoreet vehicula odio vel aliquet. Curabitur ut arcu metus.</p>
-
-    <p>Sed vitae vestibulum sem, eu consequat elit. Donec libero dui, euismod sed augue eu, sagittis hendrerit enim. Suspendisse congue nisl et purus suscipit convallis. Vivamus libero arcu, semper at fringilla et, convallis ut risus. Vivamus ex felis, vehicula sit amet neque sit amet, vulputate sagittis neque. Donec mollis nunc neque, at scelerisque tellus condimentum vitae. Nam nec augue ornare, porttitor tortor et, vulputate eros. Quisque finibus augue vel auctor iaculis. Proin in leo nisi.</p>
-
-    <p>Fusce malesuada tempus justo sed laoreet. Maecenas sollicitudin eros et posuere porta. Quisque a mattis tortor. Vivamus porttitor faucibus nisl, non luctus metus auctor vitae. Etiam non aliquet dolor, ac tristique massa. Cras imperdiet gravida mi eu congue. Pellentesque fringilla erat sed justo tincidunt, vel pharetra ante lacinia. Mauris pulvinar euismod dui nec elementum. In nec blandit neque, et eleifend sem. Donec eleifend, felis eu luctus sodales, elit ex aliquet sapien, eget posuere risus justo a tellus. Aliquam porttitor urna sed sem auctor finibus.</p>
-
-    <p>Suspendisse volutpat feugiat leo, eget semper nisl molestie in. Nam tempor suscipit purus, at viverra lorem aliquet quis. Morbi tincidunt, ex vel tristique blandit, est mi ultrices eros, a commodo nulla mi at ipsum. Nam ac tincidunt erat, sit amet auctor urna. Vestibulum sit amet facilisis ex. Aenean ut interdum erat. Suspendisse malesuada arcu at sodales mollis. Nulla aliquet semper gravida. Sed id tempus felis. Cras placerat mi eget tortor pulvinar, sit amet consectetur lorem egestas. Nulla pretium, turpis in lobortis porttitor, mi quam dignissim sem, non porta turpis dolor ac elit. Suspendisse pellentesque dui vel odio blandit volutpat. Fusce finibus velit vitae tellus lobortis lacinia.</p>
+    <div style="background-color: white;" class='panel radius'>
+      <form id="contact_form" action="/contact" method="post">
+        <div class="row">
+          <div class="large-6 columns">
+            <div class="row collapse prefix-radius">
+              <div class="small-3 columns">
+                <span class="prefix">First Name</span>
+              </div>
+              <div class="small-9 columns">
+                <input name="first_name" type="text" placeholder="John">
+              </div>
+            </div>
+          </div>
+          <div class="large-6 columns">
+            <div class="row collapse postfix-radius">
+              <div class="small-9 columns">
+                <input type="text" placeholder="Zealot">
+              </div>
+              <div class="small-3 columns">
+                <span name="last_name" class="postfix">Last Name</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="large-6 columns">
+            <div class="row collapse prefix-radius">
+              <div class="small-3 columns">
+                <span class="prefix">Email Address</span>
+              </div>
+              <div class="small-9 columns">
+                <input name="email" type="text" placeholder="john@refreshministries.org">
+              </div>
+            </div>
+          </div>
+          <div class="large-6 columns">
+            <div class="row collapse postfix-radius">
+              <div class="small-9 columns">
+                <input name="telephone" type="text" placeholder="555-555-5555">
+              </div>
+              <div class="small-3 columns">
+                <span class="postfix">Telephone</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="large-12 columns">
+            <label>Tell us a little about yourself.
+              <textarea name="memo" placeholder=""></textarea>
+            </label>
+          </div>
+        </div>
+        <div class="row">
+          <div class="large-12 columns">
+            <a id="btn_contact" class="button">Send</a>
+          </div>
+        </div>
+      </form>
+    </div>
   </div>
 </div>
