--- a/app/views/layouts/parts/app/_foot.html.erb
+++ b/app/views/layouts/parts/app/_foot.html.erb
@@ -2,15 +2,15 @@
       <footer class='row'>
         <div class='large-12 columns'>
           <div class='row'>
-            <div class='large-6 small-12 columns'>
-              <p>
+            <div class='large-12 small-12 columns'>
+              <p class="text-center">
                 Copyright &copy;<%= Time.new.year %> ReFresh Ministries - All Rights Reserved
               </p>
             </div>
-            <div id="nav_top_container" class='large-6 small-12 columns'>
+            <div style="display: none;" id="nav_top_container" class='large-12 small-12 columns'>
               <ul class='inline-list right'>
                 <li>
-                  <a id="nav_top" href='#top'>Top of Page</a>
+                  &nbsp;
                 </li>
               </ul>
             </div>
