--- a/app/views/coaching/index.html.erb
+++ b/app/views/coaching/index.html.erb
@@ -2,7 +2,7 @@
   <div class="small-12 large-12 columns">
     <h2><%= page_title %></h2>
     <hr />    
-    <p>Here is the reality for pastors in today's world:</p>
+    <h3>Here is the reality for pastors in today's world:</h3>
     <ul>
       <li>71% have felt burned out or depressed…</li>
       <li>70% do not have a close friend…</li>
