--- a/app/views/layouts/parts/home/_head.html.erb
+++ b/app/views/layouts/parts/home/_head.html.erb
@@ -18,8 +18,8 @@
     <%= csrf_meta_tags %>
   </head>
   <body class='<%= controller.controller_name %>'>
-    
-    <div id="topofpage" class="contain-to-grid"> 
+    <div id="topofpage" style="display: none;"></div>
+    <div class="fixed contain-to-grid"> 
       <nav class="top-bar" data-topbar role="navigation" data-options="mobile_show_parent_link: false">
         <ul class="title-area">
           <li class="name">
@@ -32,10 +32,6 @@
         <section class="top-bar-section">
           <!-- Right Nav Section -->
           <ul class="right">
-            <li><a id="nav_coaching">Coaching</a></li>
-            <li><a id="nav_barnabas">Barnabas Experience</a></li>
-            <li><a id="nav_leadership">Leadership</a></li>
-            <li><a id="nav_contact">Contact</a></li>
             <li class="has-dropdown">
               <a href="#">About</a>
               <ul class="dropdown">
@@ -44,6 +40,10 @@
                 <li><a href="/about/ron">Ron Sylvia</a></li>
               </ul>
             </li>
+            <li><a id="nav_coaching">Coaching</a></li>
+            <li><a id="nav_barnabas">Barnabas Experience</a></li>
+            <li><a id="nav_leadership">Leadership</a></li>
+            <li><a id="nav_contact">Contact</a></li>
           </ul>
       
           <!-- Left Nav Section -->
