Ron link update

--- a/app/views/about/ron.html.erb
+++ b/app/views/about/ron.html.erb
@@ -3,7 +3,7 @@
     <h2><%= page_title %></h2>
     <hr />
     <p>
-      Ron Sylvia is the founding and lead pastor of Church at The Springs in Ocala, Florida, and Director of NEXT 
+      Ron Sylvia is the founding and lead pastor of <a href="http://thesprings.net/" target="_blank"> Church at The Springs</a> in Ocala, Florida, and Director of NEXT 
       Churches. The Springs began in an office building in 1994 with only 21 people and now with two locations averages 
       over 3,500 in weekly attendance. While leading a fast-growing church, Ron learned firsthand the value of 
       mentoring & coaching. As a result, Ron started NEXT Churches, an organization that equips lead pastors 
